syntax = "proto3";

message Person {
    string first_name = 1;
    string last_name = 2;
}

message HelloRequest {
    Person person = 1;
    string language = 2;
}

message HelloResponse {
    string greeting = 1;
}

service HelloService {
    rpc HelloSomeone(HelloRequest) returns (HelloResponse);
}